--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "((100, 12294), (12294, 44))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,9 +163,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/10], Training Loss: 0.6934, Validation Loss: 0.6932\n",
+      "Epoch [2/10], Training Loss: 0.6933, Validation Loss: 0.6931\n",
+      "Epoch [3/10], Training Loss: 0.6932, Validation Loss: 0.6932\n",
+      "Epoch [4/10], Training Loss: 0.6932, Validation Loss: 0.6931\n",
+      "Epoch [5/10], Training Loss: 0.6932, Validation Loss: 0.6932\n",
+      "Epoch [6/10], Training Loss: 0.6932, Validation Loss: 0.6932\n",
+      "Epoch [7/10], Training Loss: 0.6932, Validation Loss: 0.6931\n",
+      "Epoch [8/10], Training Loss: 0.6932, Validation Loss: 0.6932\n",
+      "Epoch [9/10], Training Loss: 0.6932, Validation Loss: 0.6931\n",
+      "Epoch [10/10], Training Loss: 0.6932, Validation Loss: 0.6931\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.nn.functional as F\n",
     "\n",
@@ -204,8 +221,97 @@
     "\n",
     "    avg_val_loss = total_val_loss / len(val_loader)\n",
     "\n",
-    "    print(f\"Epoch [{epoch+1}/{num_epochs}], Training Loss: {avg_train_loss:.4f}, Validation Loss: {avg_val_loss:.4f}\")\n"
+    "    print(f\"Epoch [{epoch+1}/{num_epochs}], Training Loss: {avg_train_loss:.4f}, Validation Loss: {avg_val_loss:.4f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_model(embedding_size):\n",
+    "    num_users = user_item_matrix.shape[0]\n",
+    "    num_animes = anime_df.shape[0]\n",
+    "    num_genres = len(genres_encoded[0])\n",
+    "    \n",
+    "    model = AnimeRecommendationModel(num_users, num_animes, num_genres, embedding_size)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_size = 50\n",
+    "model = initialize_model(embedding_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommended Animes:\n",
+      "1. Kimi no Na wa.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "\n",
+    "def get_recommendations(watched_animes, selected_genres, num_recommendations=3):\n",
+    "    anime_title_to_id = {title: anime_id for anime_id, title in enumerate(anime_df['name'])}\n",
+    "    \n",
+    "    watched_anime_ids = [anime_title_to_id.get(anime, -1) for anime in watched_animes]    \n",
+    "    watched_anime_ids = [anime_id for anime_id in watched_anime_ids if anime_id != -1]\n",
+    "    \n",
+    "    selected_genre_vector = np.zeros(len(genres_encoded[0]))\n",
+    "    for genre in selected_genres:\n",
+    "        genre_idx = anime_df['genre'].apply(lambda x: genre in x)\n",
+    "        selected_genre_vector += genres_encoded[genre_idx].sum(axis=0)\n",
+    "    \n",
+    "    user_ids = torch.tensor([0] * len(watched_anime_ids), dtype=torch.long).to(device)\n",
+    "    anime_ids = torch.tensor(watched_anime_ids, dtype=torch.long).to(device)\n",
+    "    selected_genre_tensor = torch.tensor(selected_genre_vector, dtype=torch.float).to(device)\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        recommendations = model(user_ids, anime_ids, selected_genre_tensor).squeeze()\n",
+    "    \n",
+    "    sorted_indices = torch.argsort(recommendations, descending=True)\n",
+    "    \n",
+    "    # Exclude watched anime IDs from the recommendations\n",
+    "    recommended_anime_ids = [anime_id for anime_id in sorted_indices if anime_id not in watched_anime_ids][:num_recommendations]\n",
+    "    \n",
+    "    # Convert recommended_anime_ids to a list of integers\n",
+    "    recommended_anime_ids = [int(idx) for idx in recommended_anime_ids]\n",
+    "    \n",
+    "    recommended_anime_names = [anime_df.iloc[anime_id]['name'] for anime_id in recommended_anime_ids]\n",
+    "    return recommended_anime_names\n",
+    "\n",
+    "watched_animes = [\"One Piece\", \"Fullmetal Alchemist: Brotherhood\"]\n",
+    "selected_genres = [\"Action\", \"Adventure\", \"Mystery\"]\n",
+    "num_recommendations = 3  # You can change this to the number of recommendations you want\n",
+    "recommendations = get_recommendations(watched_animes, selected_genres, num_recommendations)\n",
+    "print(\"Recommended Animes:\")\n",
+    "for idx, anime in enumerate(recommendations, start=1):\n",
+    "    print(f\"{idx}. {anime}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
