--- a/model.ipynb
+++ b/model.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,8 @@
      "output_type": "stream",
      "text": [
       "Recommended Animes:\n",
-      "1. Kimi no Na wa.\n"
+      "1. Kimi no Na wa.\n",
+      "2. Gintama°\n"
      ]
     }
    ],
@@ -297,8 +298,8 @@
     "    recommended_anime_names = [anime_df.iloc[anime_id]['name'] for anime_id in recommended_anime_ids]\n",
     "    return recommended_anime_names\n",
     "\n",
-    "watched_animes = [\"One Piece\", \"Fullmetal Alchemist: Brotherhood\"]\n",
-    "selected_genres = [\"Action\", \"Adventure\", \"Mystery\"]\n",
+    "watched_animes = [\"Fullmetal Alchemist: Brotherhood\", \"Steins;Gate\", \"Toushindai My Lover: Minami tai Mecha-Minami\", \"Violence Gekiga David no Hoshi\"]\n",
+    "selected_genres = [\"Action\", \"Adventure\", \"Drama\"]\n",
     "num_recommendations = 3  # You can change this to the number of recommendations you want\n",
     "recommendations = get_recommendations(watched_animes, selected_genres, num_recommendations)\n",
     "print(\"Recommended Animes:\")\n",
